# cameras

./: README.md
dahua_camera_app/: Dockerfile  Pipfile  README.md  application.py  camera_iface.py  config.py  config_schema.json  dahua.py  docker-compose.yml  doover_config.json  power_management.py  pyproject.toml
dahua_camera_app/application/: __main__.py  app_config.py  application.py  dahua.py  dahua_digest_auth.py
dahua_camera_app/deployment/: docker-compose.yml
dahua_camera_app/simulator/: app_config.json  docker-compose.yml
dahua_camera_app/src/dahua_camera_app/: __init__.py  app_config.py  application.py  camera_iface.py  power_management.py
device_app/: Dockerfile  README.md  doover_config.json  pyproject.toml
device_app/deployment/: docker-compose.yml.template
device_app/simulators/: app_config_fixed.json  app_config_ptz.json  app_config_thermal.json  docker-compose.yml
device_app/src/camera_app/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py  events.py  power_management.py
device_app/src/camera_app/clients/: __init__.py  bosch.py  dahua.py  hikvision.py
device_app/src/camera_app/engines/: __init__.py  base.py  bosch_base.py  bosch_ptz.py  dahua_base.py  dahua_fixed.py  dahua_ptz.py  generic.py  hikvision_thermal.py
device_app/tests/: test_imports.py
docker_package/: Dockerfile  Pipfile  application.py  dahua.py  docker-compose.yml  test.py
rtsp-to-web/: Dockerfile  app.py  config.json  docker-compose.yml  test.py
rtsp_to_web_app/: docker-compose.yml  doover_config.json  rtsp_config.json
(+31 files in other folders)
